--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,6 @@
 # Site settings
-title: EVKey - Vietnamese keyboard
-description: EVKey - Vietnamese keyboard
-
+title: EVKey
+description: Vietnamese keyboard - Bộ gõ tiếng Việt cho Windows
 
 # User settings
 username: lamquangminh
