--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 icon_title: EVKey - Vietnamese Keyboard
 title: EVKey
-description: Vietnamese Keyboard - Bộ gõ tiếng Việt cho Windows
+description: Vietnamese Keyboard - Bộ gõ tiếng Việt cho PC
 
 # User settings
 username: lamquangminh
